style.css
body {
    display: flex;
    flex-direction: column; 
    align-items: center;   
    margin: 0;
    padding: 0;
}

.top_cap {
    width: 1440px; 
    height: 29px;
    background-color: #000000;
    color: #FBFBFB;
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 12px;
    line-height: 15px;
    letter-spacing: 2px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.top_menu_under_cap {
    display: flex;
    width: 1440px;
    height: 66px;
}

.logotype_block_in_top_menu_under_cap {
    width: 182.5px;
    height: 66px;
    margin-right: 102px;
}

.logotype_in_top_menu_under_cap {
    margin: 15px 11px;
    width: 160px;
    height: 36px;
}

.middle_block_in_top_menu_under_cap {
    width: 736px; 
    height: 66px;
    margin-right: 348px;
    display: flex;
    justify-content: space-between; 
    align-items: center; 
}

.middle_block_in_top_menu_under_cap a {
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 14px;
    line-height: 21px;
    letter-spacing: 1px;
    text-transform: uppercase;
    text-decoration: none; 
    color: #000000;
}

.middle_block_in_top_menu_under_cap a:hover {
    color: #FF4A32; 
}

.the_last_block_in_top_menu_under_cap {
    width: 51px;
    height: 66px;
    display: flex;
    justify-content: space-between; 
    align-items: center; 
}

.hero_section {
    width: 1440px;
    height: 810px;
    background-image: url('Rectangle.jpg');
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
}

.hero_content {
    width: 635px;
    height: 160px;
    margin-top: 45px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.main_text_in_photo {
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 44px;
    line-height: 51px;
    color: #000000;
    margin-bottom: 10px;
}

.sub_text_in_photo {
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 15px;
    line-height: 19px;
    letter-spacing: 1px;
    color: #000000;
    margin-bottom: 35px;
}

.buttons_block_in_photo {
    width: 414px;
    display: flex;
    justify-content: space-between;
}

.red_button_in_photo {
    width: 201px;
    height: 45px; 
    background-color: #FF5A45; 
    border-radius: 25px;
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 15px;
    line-height: 22px;
    color: #FFFFFF;
    text-decoration: none;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color 0.2s ease;
}

.red_button_in_photo:hover {
    background-color: #D34330;
}

.line_under_first_hero_photo {
    width: 1440px;
    height: 83px;
    background-color: #000000;
    display: flex;
    justify-content: center;
    align-items: center;
}

.logos_block_in_line {
    width: 1200px;
    height: 48px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

